Spree-Devops/Argo-rollout/canary-version.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: spree-backend-rollout
spec:
  replicas: 3
  strategy:
    canary:
      steps:
        - setWeight: 10
        - pause: {60s}
        - setWeight: 50
        - pause: {60s}
        - setWeight: 100
  template:
    metadata:
      labels:
        app: spree-backend
        version: canary  
    spec:
      containers:
        - name: spree-backend
          image: spree/spree-api:v2  
          ports:
            - containerPort: 3000
