Spree-Devops/Argo-rollout/istio-backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spree-backend
spec:
  hosts:
    - spree-backend
  http:
    - route:
        - destination:
            host: spree-backend
            subset: stable  
          weight: 90  
        - destination:
            host: spree-backend
            subset: canary  
          weight: 10
