Spree-Devops/Argo-rollout/networking-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spree-backend
spec:
  host: spree-backend
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
